clusters/apps/arr/deluge/deluge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert -v
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: deluge
  name: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: deluge
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose.exe convert -v
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: deluge
    spec:
      containers:
        - env:
            - name: DELUGE_LOGLEVEL
              value: error
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: lscr.io/linuxserver/deluge:latest
          name: deluge
          ports:
            - containerPort: 8112
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
            - containerPort: 58846
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: deluge-claim0
            - mountPath: /download
              name: deluge-claim1
      restartPolicy: Always
      volumes:
        - name: deluge-claim0
          persistentVolumeClaim:
            claimName: deluge-claim0
        - name: deluge-claim1
          persistentVolumeClaim:
            claimName: deluge-claim1
